<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Primera Aplicacion</string>
    <string name="action_settings">Preferencias</string>
    <string name="title_activity_usuarios">Lista de usuarios</string>
    <string name="title_activity_clientes">Listado de mis clientes</string>
    <string name="title_activity_mantenedor_clientes">Administración de clientes</string>
    <string name="title_activity_entregas">Registrar una entrega</string>
    <string name="title_activity_ver_entregas">Mis Entregas</string>
    <string name="title_activity_ver_clientes_eliminados">Clientes Eliminados</string>
    <string name="title_activity_realizar_pedidos">Registrar pedido</string>
    <string name="title_activity_ver_pedidos">Pedidos Pendientes</string>
    <string name="title_activity_mantenedor_principal">Mantenedor Principal</string>
    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Cerrar navigation drawer</string>
    <string name="txtFecha">Fecha</string>
    <string name="txtGuardar">Guardar</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="txtCantidad">Cantidad</string>
    <string name="txtTotal">Total</string>
    <string name="txtTituloRealizarEntrega">Confirmar Entrega</string>
    <string name="txtBienvenido">Bienvenido</string>
    <string name="txtContrasena">Contraseña</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtIngresar">Ingresar</string>
    <string name="txtIdCliente">Id del Cliente</string>
    <string name="txtNombreCliente">Nombre Cliente</string>
    <string name="txtNombreNegocio">Nombre Negocio</string>
    <string name="txtDireccionCliente">Dirección Cliente</string>
    <string name="txtTelefonoCliente">Teléfono Cliente</string>
    <string name="txtLimpiar">Limpiar</string>
    <string name="txtEliminar">Eliminar</string>
    <string name="txtCliente">Cliente</string>
    <string name="txtProducto">Producto</string>
    <string name="txtFechaEntrega">Fecha de Entrega</string>
    <string name="txtMisClientes">Mis Clientes</string>
    <string name="txtRealizarPedido">Realizar Pedido</string>
    <string name="txtAdministrarClientes">Administrar Clientes</string>
    <string name="txtVerpedidos">Ver Pedidos</string>
    <string name="txtVerEntregas">Ver Entrega</string>
    <string name="txtVerClientesEliminados">Ver Clientes Eliminados</string>
    <string name="txtVerUsuarios">Ver Usuarios</string>
    <string name="txtVerUbicacionesRegistradas">Ubicaciones registradas</string>
    <string name="txtMapa">Mapa</string>
    <string name="txtSalir">Salir</string>
    <string name="txtEntregaRegistradaConExito">Entrega registrada con exito</string>
    <string name="txtAlgoFueMal">Algo salió mal</string>
    <string name="RelleneTodosLosCampos">Rellene todos los campos</string>
    <string name="txtUsuarioPasswordIncorrectos">Usuario o contraseña incorrectos</string>
    <string name="txtClienteActualizado">Cliente actualizado con éxito</string>
    <string name="txtClienteInsertado">Cliente insertado con éxito id: </string>
    <string name="txtClienteEliminado">Se eliminó el cliente con exito</string>
    <string name="txtClienteNoExiste">El cliente seleccionado no existe</string>
    <string name="txtParaSalirPresione">Para salir presione salir en el menú</string>
    <string name="txtPedidoAgregado">Pedido agregado con éxito</string>
    <string name="txtEscribeFechaBien">Escriba bien la fecha de entrega</string>
    <string name="txtConfirmacion">Confirmación</string>
    <string name="txtDeseaRealizarEntrega">¿Desea realizar la entrega ahora?</string>
    <string name="txtTelefono">Teléfono</string>
    <string name="txtDireccion">Dirección</string>
    <string name="txtFechaPedido">Fecha Pedido</string>
    <string name="txtLatitud">Latitud</string>
    <string name="txtLongitud">Longitud</string>
    <string name="txtIp">Dirección IP</string>


</resources>
