<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:title="@string/txtMisClientes"
            android:checked="true"/>
        <item
            android:id="@+id/nav_second_fragment"
            android:title="@string/txtRealizarPedido" />
        <item
            android:id="@+id/nav_third_fragment"
            android:title="@string/txtAdministrarClientes" />
        <item
            android:id="@+id/nav_four_fragment"
            android:title="@string/txtVerpedidos" />
        <item
            android:id="@+id/nav_fifth_fragment"
            android:title="@string/txtVerEntregas" />
        <item
            android:id="@+id/nav_sixth_fragment"
            android:title="@string/txtVerClientesEliminados" />
        <item
            android:id="@+id/nav_seventh_fragment"
            android:title="@string/txtVerUsuarios" />
        <item
            android:id="@+id/verUbicacionesRegistradas"
            android:title="@string/txtVerUbicacionesRegistradas"/>
        <item
            android:id="@+id/mantenedorMapa"
            android:title="@string/txtMapa"/>
        <item
            android:id="@+id/salir"
            android:title="@string/txtSalir"/>
    </group>
</menu>